# dark_matter-photon_scattering

./: .gitignore  Fermi-LAT_analysis.py  Fermi-LAT_analysis_coupling.py  Fermi-LAT_analysis_lowmass.py  README.md  README_FermiLAT_Data.md  README_weak_cross_section.md  batch_process_fermi.py  download_fermi.sh  extract_spectrum.py  gtbin.par  gtexpcube2.par  gtltcube.par  gtmktime.par  gtselect.par  pyproject.toml  requirements_analysis.txt  requirements_fermi.txt  runallTotani.sh  setup.sh  trinity_plotting.py  weak_cross_section.ipynb
Totani_paper_check/: .gitignore  README.md  TEMPLATE_NORMALIZATION_FIXES.md  mcmc.py  pyproject.toml  setup.sh
Totani_paper_check/check_templates/: check_bubbles_flat.py  check_bubbles_posneg.py  check_component.py  check_fb.py  check_gas.py  check_ics.py  check_iso.py  check_loopI.py  check_nfw.py  check_ps.py  make_template_grid_21gev.py  run_all_checks.sh  run_systematics_suite.py
Totani_paper_check/data_download/: download_fermi_totani.sh  download_fermi_totani_0_-30.sh  download_fermi_totani_0_0.sh  download_fermi_totani_0_30.sh  download_fermi_totani_0_45.sh  download_fermi_totani_300_0.sh  download_fermi_totani_45_0.sh  download_fermi_totani_60_0.sh  download_full_roi.sh  gtbin.par  gtexpcube2.par  gtltcube.par  gtmktime.par  gtselect.par  make_bin_edges.py  make_energybins.py  process_totani.sh  process_totani_full.sh  totani_13bins.fits  totani_13bins_gev_edges.txt
Totani_paper_check/docs/: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md
Totani_paper_check/fig1/: make_totani_fig1_maps.py
Totani_paper_check/fig11/: make_fig11.py
Totani_paper_check/fig2_3/: make_totani_fig2_fig3_all.py  mcmc  mcmc_coefficients.txt  mcmc_coefficients_fig2_3_quick.txt  reproduce_totani_fig2_fig3.py
Totani_paper_check/fig4/: make_totani_fig4.py  mcmc_coefficients_fig4.txt
Totani_paper_check/fig5_6_7/: make_fig.py  make_totani_fig5_6_7.py  mcmc_coefficients_fig5.txt  mcmc_coefficients_fig6.txt  mcmc_coefficients_fig7.txt
Totani_paper_check/fig8/: make_totani_fig8.py
Totani_paper_check/fig9/: make_totani_fig9_likelihood.py
Totani_paper_check/figures/: make_fig11.py  make_fig12.py  make_figures_from_config.py  make_totani_fig1_maps.py  make_totani_fig8.py  make_totani_fig9_likelihood.py
Totani_paper_check/make_templates/: bubble_vertices_north.txt  bubble_vertices_south.txt  build_bubbles_flat_binary.py  build_bubbles_posneg_totani.py  build_bubbles_sca_decomp.py  build_bubbles_template_paper.py  build_bubbles_templates.py  build_fbub2.py  build_fermi_bubbles_templates.py  (+12 more)
(+267 files in other folders)
